# hongsoohyuk

./: .cursorignore  .gitignore  .oxlintrc.json  .prettierrc  CLAUDE.md  IMPROVEMENT_ROADMAP.md  NATIVE_GAME.md  QUICKSTART.md  README.md  TEST_COVERAGE_ANALYSIS.md  TODO-refactor.md  TURNSTILE_SETUP.md  WASM_INTEGRATION.md  components.json  eslint.config.mjs  feature_sliced_design_nestjs.mdc  jest.config.mjs  jest.config.ts  jest.setup.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  proxy.ts  solid.mdc  tsconfig.json  vercel.json
.claude/: settings.local.json
.serena/: project.yml
app/: globals.css  robots.ts  sitemap.ts
docs/: APP_ROUTER_STRUCTURE.md  ARCHITECTURE.md  CPP_GAME_ENGINE.md  I18N_GUIDE.md  INSTAGRAM_REFACTORING.md  LOCALE_DETECTION.md  NEXTJS_LEARNING.md  PROJECT_LEARNING.md  REACT_LEARNING.md  SERVER_COMPONENT_OPTIMIZATION.md  performance-enhancements.md  testing-handover.md  testing-onboarding-guide.md
e2e/: blog.spec.ts  chat.spec.ts  cli.spec.ts  guestbook-timezone.spec.ts  guestbook.spec.ts  home.spec.ts  instagram.spec.ts  navigation.spec.ts  project-detail.spec.ts  project-list.spec.ts  (+1 more)
wasm/: .gitignore  CMakeLists.txt  CMakeLists_native.txt  NATIVE_DEVELOPMENT.md  README.md  build.sh  build_native.sh
wasm/include/: encounter_system.h  game.h  game_engine.h  modal_state.h  player_character.h  renderer.h  town_map.h  types.h
wasm/src/: bindings.cpp  encounter_system.cpp  game.cpp  game_engine.cpp  modal_state.cpp  player_character.cpp  renderer.cpp  town_map.cpp
wasm/src_native/: main.cpp
(+702 files in other folders)
